--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,12 @@
       "dest": "api/wsgi.py"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/staticfiles/$1"
+    },
+    {
       "src": "/media/(.*)",
-      "dest": "/media/$1"
+      "dest": "/mediafiles/$1"
     }
   ]
 }
