--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "builds": [{
+      "src": "api/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+  }],
+
   "routes": [
     {
       "src": "/(.*)",
